host_build_error.txt
   Compiling lastz_auto_host v0.1.0 (C:\Users\khong\Documents\lastz_auto_core\host)
error[E0382]: borrow of moved value: `stream`
  --> host\src\main.rs:84:41
   |
63 |         Ok(mut stream) => {
   |            ---------- move occurs because `stream` has type `TcpStream`, which does not implement the `Copy` trait
...
67 |             let mut reader = BufReader::new(stream);
   |                                             ------ value moved here
...
84 |                                 let _ = stream.write_all(read_cmd.as_bytes());
   |                                         ^^^^^^ value borrowed here after move

For more information about this error, try `rustc --explain E0382`.
error: could not compile `lastz_auto_host` (bin "lastz_auto_host") due to 1 previous error
